<resources>
    <string name="app_name">World Runner</string>
    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <string name="email">Email</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="weight"> ex 75 kg</string>
    <string name="height"> ex 175 cm</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="signIn">SIGN IN</string>
    <string name="next">NEXT</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="register_user">Don\'t have an account yet? Register here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>


</resources>
