<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:src="@drawable/logo_worldrunner_3" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/firstName"
        android:inputType="textCapWords"
        android:padding="@dimen/padding_edit_text"
        android:singleLine="true"
        android:textColor="@color/texteffect"
        android:textColorHint="@color/text_hint"
        android:textCursorDrawable="@null"
        android:textSize="20sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/lastName"
        android:inputType="textCapWords"
        android:padding="@dimen/padding_edit_text"
        android:singleLine="true"
        android:textColor="@color/texteffect"
        android:textColorHint="@color/text_hint"
        android:textCursorDrawable="@null"
        android:textSize="20sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />


    <EditText
        android:id="@+id/et_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/padding_edit_text"
        android:singleLine="true"
        android:textColor="@color/texteffect"
        android:textColorHint="@color/text_hint"
        android:textCursorDrawable="@null"
        android:textSize="20sp" />



    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/passowrd"
        android:inputType="textPassword"
        android:padding="@dimen/padding_edit_text"
        android:singleLine="true"
        android:textColor="@color/texteffect"
        android:textColorHint="@color/text_hint"
        android:textCursorDrawable="@null"
        android:textSize="20sp" />




    <CheckBox
        android:id="@+id/terms_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:text="@string/terms_conditions"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:background="@drawable/loginbutton_selector"
        android:padding="15dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/signUp"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:padding="@dimen/padding_edit_text"
        android:text="@string/already_user"
        android:textColor="@color/text_focused"
        android:textSize="15sp" />


    <ProgressBar
        android:id="@+id/progress"
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:indeterminate="true"
        android:visibility="invisible" />

</LinearLayout>
